2007-12-28  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-model.c:
	(clutter_model_real_get_n_rows), (clutter_model_class_init),
	(clutter_model_get_n_rows): Provide a default implementation of
	the get_n_rows() method, so that subclasses do not strictly need
	to override it

2007-12-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	(parse_rotation_array): Inline, and get the JsonArray as a parameter

	(parse_rotation): Update

	* clutter/clutter-script.c:
	(warn_missing_attribute): Fix for emacs-style warnings
	
	(clutter_script_parse_node): Remove an ifdeffed out section

	(clutter_script_construct_parameters),
	(clutter_script_construct_object): Rename get_parameters, so
	it's obvious what it does

2007-12-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-script.json: Fix the JSON syntax

2007-12-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-enum-types.c.in: Fix the template

2007-12-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	* clutter/clutter-texture.c: Remove some of the remaining FIXMEs
	in the API documentation

2007-12-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-color.c:
	* clutter/clutter-event.c:
	* clutter/clutter-stage.c: Intern more strings using the I_() macro

	* clutter/clutter-enum-types.c.in: Call g_intern_static_string()
	in the enum types template

2007-12-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Add clutter_actor_set_clipu() and
	clutter_actor_get_clipu()

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	(clutter_actor_set_clipu), (clutter_actor_get_clipu): Add the
	new units-based versions of the clip accessors

	(clutter_actor_set_clip), (clutter_actor_get_clip): Reimplement
	the pixels-based clip accessors as proxies for the units-based
	ones

2007-12-24  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/cogl/cogl.h: Update cogl_clip_set() to accept the